# akips

./: .gitignore  README.md  pyproject.toml  relese_process.txt  setup.cfg
.github/workflows/: ci.yml  poetry-pypi-publish.yml  pre_release.yml
akips/: __init__.py  exceptions.py
docs/akips/: exceptions.html  index.html
tests/: test_connection.py
