[tool.poetry]
name = "akips"
version = "0.3.1"
description = "Module to interact with the AKiPS Network Monitoring Software API interface"
authors = ["William E Whitaker <will.whitaker@unc.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/unc-network/akips"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.31"
pytz = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
#flake8 = "^7.0.0"
pdoc3 = "^0.10.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
